--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "todo-cli",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "cz-conventional-changelog": "^3.3.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  }
+	"name": "todo-cli",
+	"module": "index.ts",
+	"type": "module",
+	"bin": {
+		"todo": "./dist/todo.js"
+	},
+	"scripts": {
+		"build": "bun build todo.ts --outdir ./dist --minify --target bun"
+	},
+	"devDependencies": {
+		"@types/bun": "latest",
+		"@types/yargs": "^17.0.33",
+		"cz-conventional-changelog": "^3.3.0"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"dependencies": {
+		"inquirer": "^12.3.2",
+		"yargs": "^17.7.2"
+	}
 }
