refactor: service layer

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
 	"module": "todo.ts",
 	"type": "module",
 	"bin": {
-		"todo": "./dist/todo.js",
-		"t": "./dist/todo.js"
+		"todo": "./dist/index.js",
+		"t": "./dist/index.js"
 	},
 	"scripts": {
-		"build": "bun build todo.ts --outdir ./dist --minify --target bun"
+		"build": "bun build src/index.ts --outdir ./dist --minify --target bun",
+		"dev": "bun run src/index.ts"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
